Refactor security configuration and update CORS settings; add health check endpoints